Cherry-pick d4e6d3cf133a. rdar://168699854

REGRESSION (273395@main): Missing WTF::move() in Expected<T,E>::operator*() && causes inconsistent move semantics
    <https://bugs.webkit.org/show_bug.cgi?id=306039>
    <rdar://168682753>

    Reviewed by Sam Weinig.

    * Source/WTF/wtf/Expected.h:
    (std::experimental::fundamentals_v3::expected::operator*):
    - Add WTF::move() that was mistakenly removed in 273395@main.

    Canonical link: https://commits.webkit.org/306031@main

Identifier: 305413.102@safari-7624-branch